# inventory

./: .flake8  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  TODO.md  compose.yaml  docker-compose.yaml  install.sh  install.yml  pipeline.sh  pyproject.toml  requirements.txt  settings.dbg  setup.py  ssl
application/: __init__.py  __main__.py  app.py  models.py  settings.py
application/config/: settings.py  setup.py
application/database/: __init__.py  ingredient.py
application/lib/: cache.py  database.py  logger.py  logging.py  models.py  types.py
application/models/: __init__.py  _base.py  base.py  devices.py  food.py  ingredient.py  medication.py  medicine.py  music.py  sensors.py  video.py
application/reference/: imperial.py
application/router/: __init__.py  _base.py  crudrouter.py  health.py  middleware.py
configs/: inventory.conf  inventory.loc  inventory.upstream  nginx.conf  proxy.conf
systemd/: inventory.service  inventory.service.j2
tests/: __init__.py  test_crud.py  test_health.py
