[tool.poetry]
name = "Inventory API"
version = "0.1.0"
description = "API for Inventory Access"
authors = ["Trent Dierking"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
sqlmodel = "^0.0.6"
fastapi-crudrouter = "^0.8.5"
uvicorn = "^0.17.5"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
pytest-gevent = "^1.1.0"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.940"
radon = "^5.1.0"
isort = "^5.10.1"
black = "^22.1.0"
httpx = "^0.22.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.2"